--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -1,9 +1,9 @@
 <div class="skils-set-page-main" id="skils-set-page-main">
-  <div class="page-content-intro-hr">skills set | tech stack</div>
+  <div class="page-content-intro-hr">key skills & expertise</div>
 
   <div class="sets-container">
     <div class="set-container">
-      <div class="heading">Tech Stack</div>
+      <div class="heading">key skills</div>
       <div class="set">
         <span class="skill"><i class="bi bi-code-slash"></i> HTML5</span>
         <span class="skill"><i class="bi bi-code-slash"></i> SCSS</span>
@@ -15,7 +15,7 @@
     </div>
 
     <div class="set-container">
-      <div class="heading">Key skills</div>
+      <div class="heading">Expertise</div>
       <div class="set">
         <span class="skill"
           ><i class="bi bi-lightbulb"></i> Responsive UIs</span
