--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -79,7 +79,7 @@
     <a
       rel="noopener"
       title="WhatsApp Chat"
-      href="https://wa.me/27796910468?text=Good day, I would like to hear more about your Angular Front-End Development. Please let me for know if you are available for discussion. Thank you."
+      href="https://wa.me/27796910468?text=Good day, I would like to hear more about your Angular Front-End Development. Please let me know if you are available for further discussion. Thank you."
       class="whats-app-btn"
       target="_blank"
       rel="noopener"
