--- a/src/styles/themes/_dark.scss
+++ b/src/styles/themes/_dark.scss
@@ -53,90 +53,78 @@
                 }
             }
 
-            .cards-container {
-                .card {
-                    background-color: #12202e;
-                    box-shadow: $dark-box-shadow;
-
-                    .card-title {
-                        color: #adb5bd;
-                    }
-
-                    .card-button {
-                        .explore {
-                            background-color: red;
-                        }
-                    }
-
-                    &:hover {
-                        background-color: #2c3e50;
-
-                        .card-icon {
-                            .bi {
-                                background-color: #adb5bd;
-                            }
-                        }
-
-                        .explore {
-                            background-color: brown;
-                        }
-                    }
-                }
-            }
-
             .intro-container {
-                padding: 1% 10% 2%;
+                padding: 18px 10%;
                 border-radius: $spacing-sm;
                 text-align: center;
-                background-color: $dark-secondery-bg-color;
 
                 .developer-name {
                     font-size: $font-size-lg + 8px;
                     font-weight: bold;
                 }
 
-                .developer-title {
-                    text-transform: uppercase;
-                    font-size: $font-size-md + 2px;
-                    font-family: 50;
+                .quick-links {
+                    display: flex;
+                    flex-direction: row;
+                    column-gap: 20px;
+                    justify-content: center;
+                    margin: -5px 8% 5px;
+
+                    border-bottom: 0.1em solid rgb($light-default-font-color, 1);
+                    padding-bottom: 25px;
+
+
+                    i {
+                        font-size: 20px;
+                        cursor: pointer;
+                        padding: 5px 7px;
+                        border-radius: 50px;
+                        border: 0.1em solid rgb($light-default-font-color, 0.5);
+                        
+
+                        &.bi-github,  &.bi-linkedin,  &.bi-whatsapp {
+                            color: rgba($light-primary-bg-color, 0.4);
+                        }
+
+                    }
+
                 }
 
                 .developer-skills-container {
 
                     .developer-skill {
-                        background-color: $light-primary-bg-color;
+                        background-color: rgba($dark-primary-bg-color, 0.4);
+                        color: rgba($light-primary-bg-color, 0.3);
+
+                        i {
+                            color: rgba($light-primary-bg-color, 0.4);
+                        }
+
+                        &:hover {
+                            background-color: $error-color;
+                            color: $light-neutral-font-color;
+
+                            i {
+                                color: $light-neutral-font-color;
+                            }
+                        }
                     }
                 }
 
-              .developer-intro  {
-                    margin: 15px 0;
+                .developer-intro {
+                    margin: 5px 0;
                     line-height: 1.6;
-                     background-color: rgb($dark-primary-bg-color, 0.1);
 
                     .highlight {
                         font-weight: bold;
                         color: $light-default-font-color;
                     }
 
-                        .read {
-                            color: $comp-default-font-color;
-                        }
-                }
-
-                .intro-btn-container {
-
-                    .intro-btn {
-
-                        &.gitHub-btn {
-                            background-color: $dark-primary-bg-color;
-                        }
-
-                        &.linkedin-btn {
-                            background-color: $light-primary-bg-color;
-                            color: $light-default-font-color;
-                        }
+                    .read {
+                        color: $comp-default-font-color;
                     }
                 }
+
             }
 
             @include respond-to("pro-xs") {
@@ -155,7 +143,6 @@
                     }
                 }
 
-                .cards-container,
                 .page-content-intro-hr {
                     display: none;
                 }
@@ -163,6 +150,11 @@
                 .intro-container {
                     margin-top: 0;
                     padding: $spacing-sm $spacing-sm $spacing-lg $spacing-sm ;
+                    box-shadow: $dark-box-shadow;
+
+                    .developer-intro {
+                        background-color: $dark-secondery-bg-color;
+                    }
 
                     .intro-btn-container {
                         column-gap: 10px;
@@ -177,6 +169,7 @@
         }
 
         #about-page-main {
+            margin-bottom: -5px;
 
             .page-content-intro-hr {
 
@@ -188,9 +181,9 @@
 
             .about-content {
                 border: none;
+                gap: 10px;
 
                 .about-container {
-                    box-shadow: $dark-box-shadow;
                     padding: $spacing-sm;
                     border-radius: $spacing-sm;
 
@@ -199,7 +192,7 @@
                     }
 
                     &:hover {
-                        box-shadow: $dark-hover-box-shadow;
+                        box-shadow: $dark-box-shadow;
                     }
                 }
             }
@@ -223,10 +216,19 @@
                     }
                 }
 
+                .about-content {
+                    row-gap: 25px;
+
+                    .about-container {
+                        box-shadow: $dark-box-shadow;
+                    }
+                }
             }
         }
 
         #skils-set-page-main {
+
+            margin-bottom: -5px;
 
             .page-content-intro-hr {
 
@@ -239,9 +241,9 @@
             .sets-container {
                 padding: 0;
                 margin-bottom: 15px;
+                gap: 10px;
 
                 .set-container {
-                    box-shadow: $dark-box-shadow;
                     padding: $spacing-sm;
                     border-radius: $spacing-sm;
 
@@ -252,11 +254,12 @@
                     .set {
                         .skill {
                             @include heading-dark;
+                            background-color: rgba(#12202e, 0.8);
                         }
                     }
 
                     &:hover {
-                        box-shadow: $dark-hover-box-shadow;
+                        box-shadow: $dark-box-shadow;
                     }
                 }
             }
@@ -278,6 +281,14 @@
                         border-bottom: none;
                     }
                 }
+
+                .sets-container {
+                    row-gap: 25px;
+
+                    .set-container {
+                        box-shadow: $dark-box-shadow;
+                    }
+                }
             }
         }
 
@@ -293,6 +304,7 @@
 
             .project-details {
                 box-shadow: $dark-box-shadow;
+                background-color: transparent;
                 border-radius: $spacing-sm;
 
                 .details-container {
@@ -496,6 +508,20 @@
                 .footer-item-title {
                     @include heading-dark;
                 }
+
+                color: $light-primary-font-color;
+
+                ul {
+                    li {
+
+                        a {
+                            &:hover {
+                                color: $comp-default-font-color;
+                            }
+                        }
+                    }
+                }
+
             }
 
             .footer-bottom-section {
