--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="about-page-main" id="about-page-main">
-  <div class="page-content-intro-hr">developer | portfolio </div>
+  <div class="page-content-intro-hr">developer & portfolio </div>
 
   <div class="about-content">
     <div class="about-container">
