--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -13,7 +13,8 @@
         </div>
       </div>
       <p class="site-description" (click)="redirectToHome()">
-        Front-End Developer (Angular)
+        <!-- Front-End Developer (Angular) -->
+         Showcasing Angular Skills
       </p>
     </div>
   </div>
