--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -8,7 +8,6 @@
     padding: 10px 0;
     text-align: left;
 
-
     .site-names {
         display: flex;
         flex-direction: row;
@@ -41,6 +40,7 @@
 
             .site-description {
                 color: $comp-default-font-color;
+                font-size: $font-size-md;
             }
         }
     }
