--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -20,8 +20,8 @@
     .about-content {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        row-gap: 25px;
-        column-gap: 15px;
+        gap: 10px;
+    
         text-align: left;
 
         .about-container {
@@ -29,8 +29,6 @@
             border: none;
             padding: $spacing-sm $spacing-sm ;
             cursor: pointer;
-
-            box-shadow: $light-box-shadow;
             padding: $spacing-sm;
             border-radius: $spacing-xs;
 
@@ -57,7 +55,7 @@
             }
 
             &:hover {
-                box-shadow: $light-hover-box-shadow;
+                box-shadow: $light-box-shadow;
             }
         }
     }
@@ -82,6 +80,7 @@
 
             .about-container {
                 text-align: center;
+                box-shadow: $light-box-shadow;
 
                 &.background,
                 &.portfolio {
