--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -29,7 +29,7 @@
             display: grid;
             row-gap: 10px;
             grid-template-columns: 1fr;
-            margin-bottom: 15px;
+            margin: 15px 0;
             position: relative;
 
             #spinner-container {
