--- a/src/styles/pages/_skills-set.scss
+++ b/src/styles/pages/_skills-set.scss
@@ -19,20 +19,20 @@
     .sets-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        row-gap: 25px;
-        column-gap: 15px;
+        row-gap: 10px;
+        column-gap: 10px;
         text-align: left;
 
         .set-container {
-            box-shadow: $light-box-shadow;
             border-radius: $spacing-xs;
             border: none;
             padding: $spacing-sm $spacing-sm ;
             cursor: pointer;
 
             .heading {
-               margin-bottom: $spacing-xs + 4px;
                 @include heading-light;
+                margin-bottom: $spacing-xs + 4px;
+
             }
 
             .set {
@@ -44,7 +44,7 @@
                 .skill {
                     padding: $spacing-xs - 3px;
                     padding-left: $spacing-xs - 2px;
-                    background-color: $light-primary-bg-color;
+                    background-color: rgba($light-secondery-bg-color, 0.4);
                     border-radius: $spacing-xs;
 
                     i {
@@ -61,7 +61,7 @@
             }
 
             &:hover {
-                box-shadow: $light-hover-box-shadow;
+                box-shadow: $light-box-shadow;
             }
         }
     }
@@ -71,7 +71,7 @@
         .sets-container {
             display: grid;
             grid-template-columns: 1fr;
-            row-gap: 25px;
+            row-gap: 5px;
             column-gap: 15px;
         }
 
@@ -90,9 +90,11 @@
         }
 
         .sets-container {
+            row-gap: 25px;
 
             .set-container {
                 text-align: center;
+                box-shadow: $light-box-shadow;
 
                 &.frameworks,
                 &.tools {
